# pii-leak-hunter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
fixtures/: demo_logs.ndjson
pii_leak_hunter/: __init__.py
pii_leak_hunter/analysis/: __init__.py  clustering.py  context.py  exposure_graph.py  timeline.py  validation.py
pii_leak_hunter/cli/: main.py
pii_leak_hunter/core/: __init__.py  baseline.py  models.py  normalizer.py  pipeline.py  scanner.py
pii_leak_hunter/correlation/: __init__.py  correlator.py
pii_leak_hunter/detection/: custom_recognizers.py  engine.py  patterns.py  presidio_adapter.py
pii_leak_hunter/hunts/: __init__.py  live.py  recipes.py
pii_leak_hunter/loader/: __init__.py  file_loader.py
pii_leak_hunter/output/: csv_writer.py  evidence_pack.py  html_writer.py  json_writer.py  markdown_writer.py  sarif_writer.py
pii_leak_hunter/providers/: __init__.py  base.py  cloudwatch.py  coralogix.py  datadog.py  dynatrace.py  factory.py  new_relic.py  splunk.py
pii_leak_hunter/scoring/: risk.py
pii_leak_hunter/security/: __init__.py  least_privilege.py
pii_leak_hunter/sources/: __init__.py  azure_devops.py  base.py  confluence.py  filesystem.py  github.py  google_workspace.py  http_utils.py  jira.py  monday.py  notion.py  postgres.py  registry.py  s3.py  servicenow.py  slack.py  snowflake.py  teams.py  (+1 more)
tests/: test_cli.py  test_cloud_secrets.py  test_masking.py  test_outputs.py  test_pipeline.py  test_provider.py  test_saas_sources.py  test_sources.py  test_ui.py  test_workflow_features.py
(+5 files in other folders)
