[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-leak-hunter"
version = "5.0.10"
description = "Detect PII leaks, masking failures, and secrets in logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "boto3>=1.35,<2",
  "httpx>=0.27,<0.29",
  "presidio-analyzer>=2.2.354,<3",
  "psycopg[binary]>=3.2,<4",
  "streamlit>=1.42,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
pii-leak-hunter = "pii_leak_hunter.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pii_leak_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
